# RAG-Drift_Detection

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  RAG_DRIFT_PRD.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: drift_detection_benchmark.py  drift_detection_results.json
config/: default.yaml
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/components/: DriftPanel.module.css  DriftPanel.tsx  IngestPanel.module.css  IngestPanel.tsx  QueryPanel.module.css  QueryPanel.tsx  Sidebar.module.css  Sidebar.tsx
notebooks/: walkthrough.ipynb
rag/: __init__.py  api.py  cli.py  logging.py  models.py  persistence.py  settings.py  tracking.py
rag/drift/: __init__.py  alarm.py  detector.py  scheduler.py  snapshot.py
rag/embedding/: __init__.py  cache.py  encoder.py  registry.py
rag/generation/: __init__.py  llm.py  prompt.py  streaming.py
rag/ingestion/: __init__.py  chunker.py  metadata.py  parsers.py
rag/retrieval/: __init__.py  reranker.py  retriever.py
rag/vector_store/: __init__.py  base.py  faiss_store.py  qdrant_store.py
samples/: embedding_drift.md  retrieval_augmented_generation.md
tests/: __init__.py  conftest.py
tests/eval/: __init__.py  run_sample_corpus.py  sample_corpus.json
tests/integration/: __init__.py  test_api.py  test_scheduler.py
tests/unit/: __init__.py  test_alarm.py  test_chunker.py  test_cli.py  test_detector.py  test_encoder.py  test_faiss_store.py  test_llm.py  test_metadata.py  test_parsers.py  (+4 more)
